<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/f"
     >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="384dp"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/depart"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/villed"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:hint="@string/Ex1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/arrive"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/villea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Ex2"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/DD"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dateDiplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" 
            android:hint="1/12/2012">

            <requestFocus />
        </EditText>

     <Button
         android:id="@+id/pickDate"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:onClick="showDatePickerDialog"
         android:text="@string/pick_date" />
     
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/DA"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dateDiplay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:hint="20/2/2012" />

<Button
    android:id="@+id/pickDate2"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:onClick="showDatePickerDialog"
    android:text="@string/pick_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/compagne"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/compagne"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classe"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />
   
     <Spinner
         android:id="@+id/spin"
         android:layout_width="fill_parent"
         android:layout_height="39dp"
         android:drawSelectorOnTop="true" />

    </LinearLayout>

    
<RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio2"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre2" />
    </RadioGroup>
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escale" />
    


   

    <Button
        android:id="@+id/recherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Button" />

</LinearLayout>
</ScrollView>
