<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".mesresclasse"
     android:orientation="vertical" 
     android:background="@drawable/f">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Hello"
        android:textSize="30sp" />

</ScrollView>

<LinearLayout 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
    >
       <TextView
        android:id="@+mesres/villed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="villed"
        android:textSize="20sp" />   
        <ImageView
        android:id="@+mesres/im"
        android:layout_width="100dp"
        android:src="@drawable/fleche"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>   
        <TextView
        android:id="@+mesres/villea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="villea"
        android:textSize="20sp" />
    
    
</LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/num"
            android:textColor="#0000FF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+mesres/numvol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num1"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Place"
            android:textColor="#0000FF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+mesres/nbplac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Place1"
            android:inputType="number" />
      </LinearLayout>
      
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#0000FF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+mesres/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date1"
            android:inputType="date" >
</TextView>

      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classe :"
            android:textColor="#0000ff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+mesres/classe"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="TextView" />

    </LinearLayout>
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

    <Button
        android:id="@+mesres/prec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&lt;&lt;" />
        
       <Button
           android:id="@+mesres/avan"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=">>" />

</LinearLayout>
       
     <LinearLayout 
    android:weightSum="100"
    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

 <Button
     android:id="@+mesres/delete"
     android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_weight="142.50"
     android:text="Annuler La Reservation" />

 <Button
     android:id="@+mesres/fermer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Fermer" />

</LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:orientation="vertical">
 
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingTop="50dp" >

         <TextView
             android:id="@+mesres/np"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="1/5" />
     </LinearLayout>

</LinearLayout>